const grpc = require('@grpc/grpc-js');
const protoLoader = require('@grpc/proto-loader');

// Protobuf íŒŒì¼ ê²½ë¡œ
const PROTO_PATH = '../idxmngr-go/protos/index_manager.proto';

// gRPC ì˜µì…˜ ì„¤ì •
const options = {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true
};

// Protobuf ë¡œë“œ
const packageDefinition = protoLoader.loadSync(PROTO_PATH, options);
const idxmngr = grpc.loadPackageDefinition(packageDefinition).idxmngrapi;

class IndexCreator {
  constructor(serverAddr = 'localhost:50052') {
    this.serverAddr = serverAddr;
    this.client = null;
    this.connect();
  }

  // gRPC ì„œë²„ì— ì—°ê²°
  connect() {
    try {
      this.client = new idxmngr.Index_manager(
        this.serverAddr,
        grpc.credentials.createInsecure()
      );
      console.log(`âœ… Connected to idxmngr server at ${this.serverAddr}`);
    } catch (error) {
      console.error(`âŒ Failed to connect to idxmngr server: ${error.message}`);
    }
  }

  // ë²”ìš© ì¡°ì§ ì¸ë±ìŠ¤ ìƒì„±
  async createHyundaiIndex() {
    console.log('\nğŸ—ï¸ Creating Hyundai Access Request Index...');
    
    try {
      const indexInfo = {
        IndexID: 'hyundai_003',
        IndexName: 'Hyundai Access Request Index',
        KeyCol: 'IndexableData',
        FilePath: '/home/blockchain/bi-index-migration/bi-index/fileindex-go/hyundai.bf',
        KeySize: 32
      };

      return new Promise((resolve, reject) => {
        this.client.CreateIndexRequest(indexInfo, (error, response) => {
          if (error) {
            console.error(`âŒ CreateIndexRequest failed: ${error.message}`);
            reject(error);
          } else {
            console.log(`âœ… Index created successfully:`);
            console.log(`   Response Code: ${response.ResponseCode}`);
            console.log(`   Response Message: ${response.ResponseMessage}`);
            console.log(`   Duration: ${response.Duration}ns`);
            console.log(`   Index ID: ${response.IndexID}`);
            resolve(response);
          }
        });
      });

    } catch (error) {
      console.error(`âŒ Index creation failed: ${error.message}`);
      throw error;
    }
  }

  // ì¸ë±ìŠ¤ ì •ë³´ í™•ì¸
  async checkIndexInfo() {
    console.log('\nğŸ” Checking index info...');
    
    try {
      const request = { 
        IndexID: 'hyundai_003',
        KeyCol: 'IndexableData'
      };

      return new Promise((resolve, reject) => {
        this.client.GetIndexInfo(request, (error, response) => {
          if (error) {
            console.error(`âŒ GetIndexInfo failed: ${error.message}`);
            reject(error);
          } else {
            console.log(`âœ… Index info retrieved:`);
            console.log(`   Response Code: ${response.ResponseCode}`);
            console.log(`   Response Message: ${response.ResponseMessage}`);
            resolve(response);
          }
        });
      });

    } catch (error) {
      console.error(`âŒ Index info check failed: ${error.message}`);
      throw error;
    }
  }

  // ì—°ê²° ì¢…ë£Œ
  close() {
    if (this.client) {
      this.client.close();
      console.log('ğŸ”Œ Connection closed');
    }
  }
}

// ë©”ì¸ ì‹¤í–‰ í•¨ìˆ˜
async function main() {
  const creator = new IndexCreator();
  
  try {
    // ì—°ê²° ì™„ë£Œ ëŒ€ê¸°
    await new Promise(resolve => setTimeout(resolve, 1000));
    
    // 1. ì¸ë±ìŠ¤ ìƒì„±
    await creator.createHyundaiIndex();
    
    // 2. ì ì‹œ ëŒ€ê¸°
    console.log('\nâ³ Waiting for index creation to complete... (3ì´ˆ)');
    await new Promise(resolve => setTimeout(resolve, 3000));
    
    // 3. ì¸ë±ìŠ¤ ì •ë³´ í™•ì¸
    await creator.checkIndexInfo();
    
    console.log('\nğŸ‰ Index creation test completed successfully!');
    
  } catch (error) {
    console.error('\nğŸ’¥ Index creation test failed:', error.message);
  } finally {
    creator.close();
  }
}

// ìŠ¤í¬ë¦½íŠ¸ê°€ ì§ì ‘ ì‹¤í–‰ë  ë•Œë§Œ main í•¨ìˆ˜ ì‹¤í–‰
if (require.main === module) {
  main();
}

module.exports = IndexCreator;
